Added 'about me' information

--- a/_config.yml
+++ b/_config.yml
@@ -1,2 +1,3 @@
+title: Michael Campo
+description: Puting things together with duct tape and chewing gum.
 theme: jekyll-theme-midnight
-title: mcampo2
